[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager on django"
authors = ["SergeiNaum <sergei.naumencko@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
python-decouple = "^3.8"
django-bootstrap5 = "^23.3"
django-filter = "^23.4"
python-json-logger = "^2.0.7"
rich = "^13.7.0"
gunicorn = "^21.2.0"
rollbar = "^0.16.3"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
